# C-OOP

./: .gitignore  CMakeLists.txt  CMakePresets.json  Lab1-OOP.sln
CPP_Stud_1/: CMakeLists.txt  CPP_Stud_1.cpp  CPP_Stud_1.h  LC.h
Lab1-1/: Header.h  Lab1-1.cpp  Lab1-1.vcxproj  Lab1-1.vcxproj.filters
Lab1-2/: Header.h  Lab1-2.cpp  Lab1-2.vcxproj  Lab1-2.vcxproj.filters  txt.txt
